# shivacon-ai

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  benchmark_finetuning.py  docs.py  download_data.py  full_benchmark.py  generate_synthetic_data.py  proof_demo.txt  pyproject.toml  requirements.txt  run_benchmark.py  test_agent.py  test_agent_v2.py  test_real_world.py  train.py  train_tokenizer.py
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  agent_v2.py
checkpoints/: checkpoint_history.json  config.json
config/: __init__.py  pretrain_config.yaml  settings.py
configs/: default.yaml  multimodal.yaml  text_only.yaml
core/: __init__.py  base.py  cross_attention.py  fusion.py  multimodal_core.py  projector.py
data/: __init__.py  audio_processor.py  collate.py  dataset.py  generate_pretraining_data.py  image_processor.py  music_processor.py  synthetic_music.jsonl  synthetic_video.jsonl  tokenizer.json  tokenizer.py  train.jsonl  val.jsonl  video_processor.py
data/pretraining/: omnicore_pretrain_train_20260221_0403.jsonl
inference/: __init__.py  engine.py  pipeline.py
logs/: metrics.json
modalities/: __init__.py  audio.py  image.py  music.py  text.py  video.py
server/: api.py
shivacon_ai.egg-info/: PKG-INFO  requires.txt  top_level.txt
training/: __init__.py  finetune.py  losses.py  scheduler.py  trainer.py
utils/: __init__.py  checkpoint_utils.py  device_utils.py  document_generator.py  logging_utils.py  metrics.py
