[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shivacon-ai"
version = "1.0.0"
description = "Shivacon AI - Multi-Modal Agentic Framework with ReAct Reasoning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shiva", email = "shivay@visionquantech.com"},
]
keywords = ["ai", "multimodal", "deep-learning", "transformer", "agent", "shivacon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "safetensors>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Shivay00001/shivacon-ai"
Repository = "https://github.com/Shivay00001/shivacon-ai"
Issues = "https://github.com/Shivay00001/shivacon-ai/issues"

[tool.setuptools]
packages = ["multimodal_ai_prod", "multimodal_ai_prod.agent", "multimodal_ai_prod.core", "multimodal_ai_prod.modalities", "multimodal_ai_prod.inference", "multimodal_ai_prod.training", "multimodal_ai_prod.utils", "multimodal_ai_prod.config", "multimodal_ai_prod.data", "multimodal_ai_prod.server"]
